@@ -49,11 +49,12 @@ Head over to the [Releases](https://github.com/Openarl/PathOfBuilding/releases) 
 ## Changelog
 ### 1.4.9 - 2017/05/08
  * AoE Radius and Weapon Range are now calculated and displayed in the "Skill type-specific Stats" section of the Calcs tab
-    * The breakdown for those calculations features a visual display of the area size
+    * The breakdowns for those calculations feature a visual display of the area size
 	* The base radius values of some skills are not known, so they will not be shown
  * Explosive Arrow now has separate skill parts for 1 fuse and 5 fuses
  * Added support for Convocation
  * Rallying Cry's buff is now able to affect minions
+ * The character limit for build names has been increased to 100; the build list has also been widened
  * Spells of the correct type will now be considered to be Triggered when socketed into Mjolner and Cospri's Malice
  * Infernal Blow no longer incorrectly benefits from modifiers to area damage
 
